# imitator

./: .dockerignore  .gitignore  .merlin  .travis.yml  Dockerfile  INSTALL.txt  Makefile  README.md  README.txt  RELEASES.md  RELEASES.txt  _oasis  brp_experiments.sh  build-patator.sh  build.sh  cav_layer.csv  cav_nolayer.csv  compile-distr.sh  compile-nondistr.sh  compile.sh  deps.dot  dune-project  experiments.py  exportRelease.sh  gen_build_info.py  gen_imitator_distr.py  gen_imitator_nondistr.py  gen_oasis.py  gen_oasis_distr.py  gen_oasis_nondistr.py  generate_csv.sh  generate_iter_Porder.sh  generate_iter_from_previous.sh  generate_iterative.sh  generate_layer.sh  generate_no_layer.sh  generate_strategies.sh  generate_table.sh  generate_table2.sh  generate_table3.sh  (+29 more)
.travis/: build.sh  deploy.sh  documentation.sh
METAS/: META.camlmpi  META.gmp  META.mpi  META.ppl
articles/: 2012-03-05-FMtool
benchmarks/: README.md  example.imi  model.imi  template.imi
comparator/: comparator.py  comparator_data.py
doc/: IMITATOR-developer-manual.md  IMITATOR-not-developer-manual.tex  IMITATOR-user-manual.tex  Makefile  Some_Ideas_and_TODO.md  algos-PDBMs.txt  biblio.bib  bibliography.tex  buildDeveloperManual.sh  buildManuals.sh  classDiagram.dot  classDiagramDistr.dot  classDiagramFull.m4  classDiagramNondistr.dot  classDiagramSimplified.m4  classDiagramStyle.dot  commons.tex  compileManual.sh  graphics-credits.tex  manual.tex  semantic_rules.md  templates.md  title_and_toc.tex
examples/: model.imi
learning/: learninginterface.py
privatedoc/: META.mpi  ex-META-pour-mpi.txt  gmp.mli  todo.txt
pta/: INSTALL.txt  Makefile
scripts/: json-parser-both.py
src/: AbstractAlgorithm.ml  AbstractAlgorithm.mli  AbstractImitatorFile.mli  AbstractModel.mli  AbstractModelUtilities.ml  AbstractModelUtilities.mli  AbstractProperty.mli  AbstractValue.ml  AbstractValue.mli  Algo1cOpa.ml  Algo1cOpa.mli  AlgoAF.ml  AlgoAF.mli  AlgoAGnot.ml  AlgoAGnot.mli  AlgoAGsafeSynth.ml  AlgoAGsafeSynth.mli  AlgoAccLoopSynth.ml  AlgoAccLoopSynth.mli  AlgoBCCover.ml  AlgoBCCover.mli  AlgoBCCoverDistributed.ml  AlgoBCCoverDistributed.mli  AlgoBCCoverDistributedMSPointBased.ml  AlgoBCCoverDistributedMSPointBased.mli  AlgoBCCoverDistributedMSPointBasedMaster.ml  AlgoBCCoverDistributedMSPointBasedMaster.mli  AlgoBCCoverDistributedMSPointBasedWorker.ml  AlgoBCCoverDistributedMSPointBasedWorker.mli  AlgoBCCoverDistributedMSRandomSeqMaster.ml  AlgoBCCoverDistributedMSRandomSeqMaster.mli  AlgoBCCoverDistributedMSRandomSeqWorker.ml  AlgoBCCoverDistributedMSRandomSeqWorker.mli  AlgoBCCoverDistributedMSSeq.ml  AlgoBCCoverDistributedMSSeq.mli  AlgoBCCoverDistributedMSSeqMaster.ml  AlgoBCCoverDistributedMSSeqMaster.mli  AlgoBCCoverDistributedMSSeqWorker.ml  AlgoBCCoverDistributedMSSeqWorker.mli  AlgoBCCoverDistributedMSShuffleMaster.ml  (+308 more)
src/deprecated/: AlgoAF.mli  UnitTestator.ml
src/lib/: AbstractAlgorithm.ml  AbstractAlgorithm.mli  AbstractModel.mli  AbstractModelUtilities.ml  AbstractModelUtilities.mli  AbstractProperty.mli  AbstractValue.ml  AbstractValue.mli  AlgoAF.ml  AlgoAF.mli  AlgoAG.ml  AlgoAG.mli  AlgoAGnot.ml  AlgoAGnot.mli  AlgoAU.ml  AlgoAU.mli  AlgoAUgen.ml  AlgoAUgen.mli  AlgoAW.ml  AlgoAW.mli  AlgoAccLoopSynth.ml  AlgoAccLoopSynth.mli  AlgoBCCover.ml  AlgoBCCover.mli  AlgoBCCoverLearning.ml  AlgoBCCoverLearning.mli  AlgoBCRandom.ml  AlgoBCRandom.mli  AlgoBCRandomSeq.ml  AlgoBCRandomSeq.mli  AlgoBCShuffle.ml  AlgoBCShuffle.mli  AlgoCartoGeneric.ml  AlgoCartoGeneric.mli  AlgoDeadlockFree.ml  AlgoDeadlockFree.mli  AlgoEF.ml  AlgoEF.mli  AlgoEFgen.ml  AlgoEFgen.mli  (+169 more)
src/lib_distr/: AlgoBCCoverDistributed.ml  AlgoBCCoverDistributed.mli  AlgoBCCoverDistributedMSPointBasedMaster.ml  AlgoBCCoverDistributedMSPointBasedMaster.mli  AlgoBCCoverDistributedMSPointBasedWorker.ml  AlgoBCCoverDistributedMSPointBasedWorker.mli  AlgoBCCoverDistributedMSRandomSeqMaster.ml  AlgoBCCoverDistributedMSRandomSeqMaster.mli  AlgoBCCoverDistributedMSRandomSeqWorker.ml  AlgoBCCoverDistributedMSRandomSeqWorker.mli  AlgoBCCoverDistributedMSSeqMaster.ml  AlgoBCCoverDistributedMSSeqMaster.mli  AlgoBCCoverDistributedMSSeqWorker.ml  AlgoBCCoverDistributedMSSeqWorker.mli  AlgoBCCoverDistributedMSShuffleMaster.ml  AlgoBCCoverDistributedMSShuffleMaster.mli  AlgoBCCoverDistributedMSShuffleWorker.ml  AlgoBCCoverDistributedMSShuffleWorker.mli  AlgoBCCoverDistributedSubdomain.ml  AlgoBCCoverDistributedSubdomain.mli  AlgoBCCoverDistributedSubdomainDynamicCollaborator.ml  AlgoBCCoverDistributedSubdomainDynamicCollaborator.mli  AlgoBCCoverDistributedSubdomainDynamicCoordinator.ml  AlgoBCCoverDistributedSubdomainDynamicCoordinator.mli  AlgoBCCoverDistributedSubdomainStatic.ml  AlgoBCCoverDistributedSubdomainStatic.mli  AlgoBCCoverDistributedSubdomainStaticCollaborator.ml  AlgoBCCoverDistributedSubdomainStaticCollaborator.mli  AlgoBCCoverDistributedSubdomainStaticCoordinator.ml  AlgoBCCoverDistributedSubdomainStaticCoordinator.mli  AlgoNZCUBdist.ml  AlgoNZCUBdist.mli  DistributedUtilities.ml  DistributedUtilities.mli  RunPaTATOR.ml  RunPaTATOR.mli
src/unit_tests/: ImitatorTest.ml  ImitatorUnitTests.ml  UnitTestUtility.ml  dune
temp_todo/: META.ppl
test/: Makefile  testSuite.ml
testing/: compare.py  regression_tests_data.py  regression_tests_data_distr.py  repeat.py  test.py  testdata_bc_improved.py  testdata_sample.py
tests/: benchmark_checksyntax.py  regression_tests_data.py  regression_tests_data_distr.py  test.py  (+1 more)
(+2095 files in other folders)
