(executable
 (name IMITATOR)
 (public_name IMITATOR)
 (libraries gmp ppl extlib fileutils str unix threads)
 (modules_without_implementation
  abstractModel
  abstractProperty
  automaton
  parsingStructure
  result)
 (flags
  (:standard
   -cclib
   -static
   -cclib
   -lppl
   -cclib
   -ltinfo
   -cclib
   -lppl_ocaml
   -cclib
   -lstdc++
   -cclib
   -lgmp
   -cclib
   -lgmpxx))
 (modes native))

(ocamllex
 (modules ModelLexer PropertyLexer))

(ocamlyacc
 (modules ModelParser PropertyParser))

(env
 (dev
  (flags
   (:standard -warn-error -A))))

; TODO: Add these steps in the dune project
; # Handling build number (using Python)
; PreBuildCommand: python gen_build_info.py
; # strip: considerably reduces the size!
; PostBuildCommand: echo "Copying main binanry file to bin/imitator …" ; cp _build/src/IMITATOR.native bin/imitator ; strip bin/imitator

; TODO: Runt regresion tests
