(executable
 (name IMITATOR)
 (public_name IMITATOR)
 (libraries gmp ppl extlib fileutils str unix threads)
 (modules_without_implementation
  abstractModel
  abstractProperty
  automaton
  parsingStructure
  result)
 (link_flags
  (:include link_flags.%{system})
  (:standard
   -cclib
   -lppl
   -cclib
   -lppl_ocaml
   -cclib
   -lstdc++
   -cclib
   -lgmp
   -cclib
   -lgmpxx))
 (modes native))

(ocamllex
 (modules ModelLexer PropertyLexer))

(ocamlyacc
 (modules ModelParser PropertyParser))

(rule
 (with-stdout-to
  link_flags.linux
  (echo "(-cclib -static -cclib -ltinfo)")))

(rule
 (with-stdout-to
  link_flags.macosx
  (echo "()")))

(env
 (dev
  (flags
   (:standard -warn-error -A))))

; TODO: Add these steps in the dune project
; # Handling build number (using Python)
; PreBuildCommand: python gen_build_info.py
; # strip: considerably reduces the size!
; PostBuildCommand: echo "Copying main binanry file to bin/imitator …" ; cp _build/src/IMITATOR.native bin/imitator ; strip bin/imitator

; TODO: Runt regresion tests
