(executable
 (name IMITATOR)
 (libraries gmp ppl extlib fileutils str unix threads)
 (modules_without_implementation
  abstractModel
  abstractProperty
  automaton
  parsingStructure
  result)
 (link_flags
  (:include link_flags.%{system})
  (:standard
   -cclib
   -lppl
   -cclib
   -lppl_ocaml
   -cclib
   -lstdc++
   -cclib
   -lgmp
   -cclib
   -lgmpxx))
 (modes native))

(install
 (section bin)
 (files imitator))

(ocamllex
 (modules ModelLexer PropertyLexer))

(ocamlyacc
 (modules ModelParser PropertyParser))

(rule
 (with-stdout-to
  link_flags.linux
  (echo "(-cclib -static -cclib -ltinfo)")))

(rule
 (with-stdout-to
  link_flags.macosx
  (echo "()")))

(env
 (dev
  (flags
   (:standard -warn-error -A))))

(rule
 (targets BuildInfo.ml BuildInfo.mli)
 (deps
  (:gen ../gen_build_info.py))
 (action
  (run python %{gen})))

(rule
 (target imitator)
 (deps IMITATOR.exe)
 (mode
  (promote
   (into ../bin)))
 (action
  (progn
   (echo "\nCopying main binary file to bin/imitator \226\128\166")
   (run chmod u+w %{deps})
   (run strip %{deps})
   (copy %{deps} %{target}))))
