(library
 (name lib)
 (libraries gmp ppl extlib fileutils str unix  threads)
 (modules_without_implementation
  abstractModel
  abstractProperty
  automaton
  parsingStructure
  result)

  )

 (ocamllex
 (modules ModelLexer PropertyLexer))

(ocamlyacc
 (modules ModelParser PropertyParser))

(env
 (dev
  (flags
   (:standard -warn-error -A))))

(rule
 (targets BuildInfo.ml BuildInfo.mli)
 (deps
  (:gen ../../gen_build_info.py))
 (action
  (run python %{gen})))